--- a/style.css
+++ b/style.css
@@ -1,36 +1,21 @@
-.content{
-  width: 45%;
-  height: 35%;
-   border: 2px solid #f6f6f6;
-   margin-top: 20%;
-   margin-left: 30%;
-   border-radius: 10px;
-   background-image: linear-gradient(rgba(0, 110, 255, 0.74), rgba(211, 14, 34, 0.972));
-}
-.input-group input{
-  margin-top: 2rem;
-}
-.btn-group .btn{
-  margin-left: 4rem;
-  margin-top: 3rem;
-}
-.content{
-  margin-top: 20%;
 
+p{
+    font-size: xx-large;
+    color: green;
+    font-weight: bolder;
 }
-.content h2{
-  margin: 1rem;
-  color: aliceblue;
-  font-weight: bold;
-  font-size: xx-large;
-  font-family: Arial, Helvetica, sans-serif;
+.stu-input{
+    width: 300px;
+    height: 10rem;
+    border: 2px solid black;
+    margin-left: 40%;
+    margin-top: 10%;
+   border-radius: 5px 5px;
+    
 }
-.cal-result{
-  margin-top: 2rem;
-  margin-left: 3rem;
+.stu-input label{
+    padding: 10px;
 }
-.cal-result p{
-  font-weight: bolder;
-  font-size: xx-large;
-  color: white;
+.stu-input button{
+    margin-left: 7rem;
 }
